--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/connectjob?createDatabaseIfNotExist=true&serverTimezone=UTC
- 
-
-spring.datasource.username=renatodavid
-spring.datasource.password=sff1jsff1j
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
-spring.sql.init.mode= never
-spring.sql.init.data-locations=classpath:data.sql
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
